fixing static header issue on mobile

--- a/wp-content/themes/point-church/sass/_header.scss
+++ b/wp-content/themes/point-church/sass/_header.scss
@@ -143,7 +143,7 @@ nav.off-canvas{ display: none; }
 	header{
 		text-align: center;
 		background: #333!important;
-		padding: 0;
+		padding: 1px 0;
 		position: static;
 
 		h1{ float: none; margin: 1em auto; }
